Lots of things: CORS setup, useQuery, top rated draft component.
